Hugging Face tokenizer intro & encoding

--- a/exercise-2-name/solution/encoding.ipynb
+++ b/exercise-2-name/solution/encoding.ipynb
@@ -9,7 +9,8 @@
     "from __future__ import annotations\n",
     "\n",
     "import string\n",
-    "import re"
+    "import re\n",
+    "from transformers import AutoTokenizer"
    ]
   },
   {
@@ -330,7 +331,7 @@
       "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
       "\n",
       "Encoded Tokens:\n",
-      "[32, 0, 1, 37, 10, 52, 33, 40, 39, 43, 24, 15, 40, 58, 46, 48, 14, 18, 11, 8, 56, 35, 34, 26, 8, 41, 3, 39, 9]\n",
+      "[20, 14, 27, 9, 44, 17, 31, 38, 4, 16, 57, 40, 38, 22, 47, 48, 49, 45, 23, 37, 30, 46, 15, 28, 37, 39, 1, 4, 32]\n",
       "\n",
       "Decoded Tokens:\n",
       "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
@@ -373,6 +374,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Tokenization is an important step in most NLP tasks. Hugging Face has been an\n",
+    "invaluable resource in training, using, and sharing different tokenizers!\n",
+    "\n",
+    "The API is flexible where you can use a tokenizer off the shelf, fine-tune a\n",
+    "tokenizer with your own data, or even train your own completely from scratch!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Loading Tokenizer"
    ]
   },
@@ -380,7 +392,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "In this notebook, we'll explore Hugging Face's tokenizers by using a pretrained\n",
+    "model. Hugging Face has many tokenizers available that have already been trained\n",
+    "for specific models and tasks!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Choose a pretrained tokenizer to use\n",
+    "my_tokenizer = AutoTokenizer.from_pretrained('bert-base-cased')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Encoding: Text to Tokens"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There's a couple ways to get the tokens from text. The simplest is calling\n",
+    "`.tokenize()` on the text."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Rory', \"'\", 's', 'shoes', 'are', 'mage', '##nta', 'and', 'so', 'are', 'Corey', \"'\", 's', 'but', 'they', 'aren', \"'\", 't', 'nearly', 'as', 'dark', '!']\n"
+     ]
+    }
+   ],
+   "source": [
+    "raw_text = '''Rory\\'s shoes are magenta and so are Corey\\'s but they aren\\'t nearly as dark!'''\n",
+    "tokens = my_tokenizer.tokenize(raw_text)\n",
+    "\n",
+    "print(tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another is calling the tokenizer with the text and then calling the `.tokens()`\n",
+    "method.\n",
+    "\n",
+    "This will also return some special tokens depending on the pretrained tokenizer\n",
+    "used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[CLS]', 'Rory', \"'\", 's', 'shoes', 'are', 'mage', '##nta', 'and', 'so', 'are', 'Corey', \"'\", 's', 'but', 'they', 'aren', \"'\", 't', 'nearly', 'as', 'dark', '!', '[SEP]']\n"
+     ]
+    }
+   ],
+   "source": [
+    "detailed_tokens = my_tokenizer(raw_text).tokens()\n",
+    "\n",
+    "print(detailed_tokens)"
    ]
   },
   {
