--- a/exercise-2-name/solution/encoding.ipynb
+++ b/exercise-2-name/solution/encoding.ipynb
@@ -331,7 +331,7 @@
       "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
       "\n",
       "Encoded Tokens:\n",
-      "[50, 19, 21, 13, 58, 39, 41, 32, 43, 9, 2, 10, 32, 44, 31, 54, 14, 24, 30, 34, 51, 42, 55, 35, 34, 40, 28, 43, 52]\n",
+      "[36, 38, 18, 32, 1, 49, 12, 29, 10, 8, 58, 16, 29, 21, 57, 2, 27, 46, 50, 47, 51, 3, 20, 13, 47, 11, 44, 10, 26]\n",
       "\n",
       "Decoded Tokens:\n",
       "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
@@ -502,7 +502,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The other way can look a little complex but can be useful when working with\n",
+    "We can also the `.convert_tokens_to_ids()` tokenizer method if we already have\n",
+    "the tokens (as strings) to get the IDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[CLS]', 'Rory', \"'\", 's', 'shoes', 'are', 'mage', '##nta', 'and', 'so', 'are', 'Corey', \"'\", 's', 'but', 'they', 'aren', \"'\", 't', 'nearly', 'as', 'dark', '!', '[SEP]']\n",
+      "[101, 14845, 112, 188, 5743, 1132, 27595, 13130, 1105, 1177, 1132, 19521, 112, 188, 1133, 1152, 4597, 112, 189, 2212, 1112, 1843, 106, 102]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(detailed_tokens)\n",
+    "detailed_ids = my_tokenizer.convert_tokens_to_ids(detailed_tokens)\n",
+    "print(detailed_ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Another way can look a little complex but can be useful when working with\n",
     "tokenizers for certain tasks."
    ]
   },
@@ -518,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +555,7 @@
        "{'input_ids': [101, 14845, 112, 188, 5743, 1132, 27595, 13130, 1105, 1177, 1132, 19521, 112, 188, 1133, 1152, 4597, 112, 189, 2212, 1112, 1843, 106, 102], 'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,12 +568,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll focus on `input_ids` which are the IDs associated with the tokenizations."
+    "We'll then focus on `input_ids` which are the IDs associated with the\n",
+    "tokenizations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
