--- a/exercise-2-name/solution/encoding.ipynb
+++ b/exercise-2-name/solution/encoding.ipynb
@@ -331,7 +331,7 @@
       "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
       "\n",
       "Encoded Tokens:\n",
-      "[36, 38, 18, 32, 1, 49, 12, 29, 10, 8, 58, 16, 29, 21, 57, 2, 27, 46, 50, 47, 51, 3, 20, 13, 47, 11, 44, 10, 26]\n",
+      "[22, 45, 43, 17, 56, 9, 38, 7, 4, 8, 28, 1, 7, 55, 54, 39, 53, 48, 32, 29, 40, 19, 51, 36, 29, 42, 34, 4, 57]\n",
       "\n",
       "Decoded Tokens:\n",
       "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
@@ -594,6 +594,100 @@
    "metadata": {},
    "source": [
     "### Decoding: Tokens to Text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We of course can use the tokenizer to go from token IDs to tokens and back to text!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll start with the inverse of the `.enocde()` method: `.decode()`!\n",
+    "\n",
+    "This will get us a full string using the tokens (from the IDs)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"[CLS] Rory's shoes are magenta and so are Corey's but they aren't nearly as dark! [SEP]\""
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids = my_tokenizer.encode(raw_text)\n",
+    "my_tokenizer.decode(ids)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You might've noticed that you didn't go back to the original text and instead\n",
+    "have some special tokens. This is because the `.encode()` will return IDs for\n",
+    "special tokens (assuming the pretrained tokenizer used special tokens).\n",
+    "\n",
+    "To use `.decode()` but not the special tokens, we can use the parameter\n",
+    "`skip_special_tokens` and set it to `True`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"Rory's shoes are magenta and so are Corey's but they aren't nearly as dark!\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_tokenizer.decode(ids, skip_special_tokens=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we instead wanted a list of the tokens decoded from the IDs, we could instead\n",
+    "use the `.convert_ids_to_tokens()` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['[CLS]', 'Rory', \"'\", 's', 'shoes', 'are', 'mage', '##nta', 'and', 'so', 'are', 'Corey', \"'\", 's', 'but', 'they', 'aren', \"'\", 't', 'nearly', 'as', 'dark', '!', '[SEP]']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_tokenizer.convert_ids_to_tokens(ids))"
    ]
   },
   {
