Note on unknown tokens; emoji as example

--- a/exercise-2-name/solution/encoding.ipynb
+++ b/exercise-2-name/solution/encoding.ipynb
@@ -331,7 +331,7 @@
       "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
       "\n",
       "Encoded Tokens:\n",
-      "[22, 45, 43, 17, 56, 9, 38, 7, 4, 8, 28, 1, 7, 55, 54, 39, 53, 48, 32, 29, 40, 19, 51, 36, 29, 42, 34, 4, 57]\n",
+      "[46, 40, 47, 26, 51, 52, 44, 25, 16, 30, 27, 14, 25, 7, 1, 58, 11, 45, 53, 43, 48, 12, 21, 2, 43, 49, 55, 16, 38]\n",
       "\n",
       "Decoded Tokens:\n",
       "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
@@ -688,6 +688,103 @@
    ],
    "source": [
     "print(my_tokenizer.convert_ids_to_tokens(ids))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### A Note on the Unknown"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One thing to consider is if a string is outside of the tokenizer's vocabulary,\n",
+    "also know as an \"unkown\" token. They are typically represented with `[UNK]` or\n",
+    "some other similar variant."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "If the tokenizer encoded the text so each character was a token (which is\n",
+    "actually not as easy as it sounds), then it would be impossible to have an\n",
+    "\"unknown\" token. Word-based tokenization will always be in danger of having \n",
+    "\"unknown\" tokens since it's virtually impossible to have every possible word (\n",
+    "and \"non-word\") in its vocabulary!\n",
+    "\n",
+    "And so you might think that subword tokenization wouldn't have an issue with\n",
+    "\"unknown\" tokens. And although there are fewer than word-based tokenization, it\n",
+    "does happen!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tokenizers are specific so it's important to use a tokenizer that will recognize\n",
+    "most of the text you're working with! For example, a lot of tokenizers might not\n",
+    "consider emoji as tokens but could be really important if emoji are especially\n",
+    "numerous in your data (like a corpus of chat messages)!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🥱 the dog next door kept barking all night!!\n",
+      "['[CLS]', '[UNK]', 'the', 'dog', 'next', 'door', 'kept', 'barking', 'all', 'night', '!', '!', '[SEP]']\n",
+      "[CLS] [UNK] the dog next door kept barking all night!! [SEP]\n"
+     ]
+    }
+   ],
+   "source": [
+    "phrase = '🥱 the dog next door kept barking all night!!'\n",
+    "ids = my_tokenizer.encode(phrase)\n",
+    "print(phrase)\n",
+    "print(my_tokenizer.convert_ids_to_tokens(ids))\n",
+    "print(my_tokenizer.decode(ids))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "omg my dad thought mcdonalds sold tacos ☠\n",
+      "['[CLS]', 'o', '##m', '##g', 'my', 'dad', 'thought', 'm', '##c', '##don', '##ald', '##s', 'sold', 'ta', '##cos', '[UNK]', '[SEP]']\n",
+      "[CLS] omg my dad thought mcdonalds sold tacos [UNK] [SEP]\n"
+     ]
+    }
+   ],
+   "source": [
+    "phrase = '''wow my dad thought mcdonalds sold tacos \\N{SKULL AND CROSSBONES}'''\n",
+    "ids = my_tokenizer.encode(phrase)\n",
+    "print(phrase)\n",
+    "print(my_tokenizer.convert_ids_to_tokens(ids))\n",
+    "print(my_tokenizer.decode(ids))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you're seeing a lot of \"unknown\" tokens with the text you're working with,\n",
+    "might consider using a different tokenizer appropiate for the task. Or it's also\n",
+    "possible to fine-tune a pretrained model or train one from scratch!"
    ]
   },
   {
