Description of char-based text gen task

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -90,7 +90,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Character-Based Generation"
+    "# Character-Based Text Generation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first model we'll try for text generation will be by training the model and\n",
+    "generating by character.\n",
+    "\n",
+    "This will mean each token will be a single character from the text and the model\n",
+    "will learn to predict the next character (a token).\n",
+    "\n",
+    "To generate text the text, the model will take in a new string,\n",
+    "character-by-character, and then generate a new likely character based on the\n",
+    "past input. Then the model will take into account that new character and\n",
+    "genearate the following character and so on and so on until the model has\n",
+    "produced a set number of characters."
    ]
   },
   {
