Description of token-based (subword) text gen task

--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -448,7 +448,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Token-Based Generation"
+    "# Token-Based Text Generation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next model we'll try is use subword as tokens instead of characters to train\n",
+    "a model and ultimately generate text token by token.\n",
+    "\n",
+    "Although this could be done by creating/training our own tokenizer, we'll use\n",
+    "Hugging Face to use a pretrained tokenizer to tokenizer our data.\n",
+    "\n",
+    "After training the model with the subword tokens, we can generate text by\n",
+    "again providing a text input but this time using the tokenizer to create subword\n",
+    "tokens. The model will then take this sequence of subwords to generate a new\n",
+    "token (subword), add this token as part of the sequence, produce a new token,\n",
+    "and so on until a set number of tokens have been generated. We can then take\n",
+    "this list of subword tokens and decode back to a string of text!"
    ]
   },
   {
