--- a/exercise-3-name/solution/text-generation.ipynb
+++ b/exercise-3-name/solution/text-generation.ipynb
@@ -31,6 +31,11 @@
     }
    ],
    "source": [
+    "# Deterministic training\n",
+    "torch.use_deterministic_algorithms(True)\n",
+    "torch.manual_seed(0)\n",
+    "\n",
+    "# Attempt GPU; if not, stay on CPU\n",
     "device = torch.device('cuda:0' if torch.cuda.is_available() else 'cpu')\n",
     "print(device)"
    ]
@@ -265,7 +270,7 @@
     "train_dataset = ShakespeareDataset(encoded, length)\n",
     "train_loader = DataLoader(\n",
     "    train_dataset,\n",
-    "    shuffle=True,\n",
+    "    shuffle=False, # Ensure determinsitic training\n",
     "    batch_size=batch_size,\n",
     ")"
    ]
@@ -342,42 +347,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 2.2764747702656463\n",
-      "[00m 6.3s (0 0%) 1.9193]\n",
+      "Epoch 1/5, Loss: 2.5301672265171624\n",
+      "[00m 6.1s (0 0%) 2.1864]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be thee inthe to all haim cato recfoneb, eve ie to thee miands, and hit mren,\n",
-      "yey brated nites lermes;\n",
-      "Epoch 2/5, Loss: 1.9104908132705445\n",
-      "[00m 12.8s (1 20%) 1.9763]\n",
-      "------------------------------------------------------------------------\n",
-      "to be or not to belavg winc.\n",
-      "iplefess weser.\n",
+      "to be or not to beelld bem\n",
+      "ton thacd an,\n",
       "\n",
-      "ayled, ofe sort, am plyder and gardis't, i stecmong; arope sert, i are\n",
-      "a\n",
-      "Epoch 3/5, Loss: 1.8275297895407143\n",
-      "[00m 19.1s (2 40%) 1.6987]\n",
+      "ickedr faratwuy ofne sutwot theceres'd to tholly id hore pefoma:\n",
+      "arrim? sobo\n",
+      "Epoch 2/5, Loss: 2.1812584218125757\n",
+      "[00m 12.5s (1 20%) 1.9870]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to bein the prup to mar us the sever, go sto have heir why his are'd,\n",
-      "and i's: be agiolids than spere sai\n",
-      "Epoch 4/5, Loss: 1.7852085169892722\n",
-      "[00m 25.6s (3 60%) 1.9129]\n",
+      "to be or not to bent fre'n weirtinin:\n",
+      "and the whathy and the wowper, not to fortry ond rotse hon: the harey, the hice \n",
+      "Epoch 3/5, Loss: 2.078537799755986\n",
+      "[00m 18.5s (2 40%) 1.8850]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to beard be were\n",
-      "i shalld?\n",
-      "\n",
-      "blius canto love: vence anur!\n",
-      "as for any inges o, he fle, where read eaks?\n",
-      "\n",
-      "a\n",
-      "Epoch 5/5, Loss: 1.7580973786667893\n",
-      "[00m 32.0s (4 80%) 2.1375]\n",
+      "to be or not to be tas onen to prainn ther doww\n",
+      "sirs move cocan upfle. her and not of\n",
+      "coim noflenos thy thate hamsty, \n",
+      "Epoch 4/5, Loss: 2.019213533934694\n",
+      "[00m 24.8s (3 60%) 1.8197]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to becoundinius stome nos.\n",
-      "\n",
-      "coziniunidius, wouk\n",
-      "not offer\n",
-      "are your cmalowrer heor bey you of sworkly hear\n"
+      "to be or not to beed ine him will pando soups thelanus:\n",
+      "the bat hons ylomy on and keas ame mant;\n",
+      "howtileas fate is lot\n",
+      "Epoch 5/5, Loss: 1.976692003640123\n",
+      "[00m 30.9s (4 80%) 1.7796]\n",
+      "------------------------------------------------------------------------\n",
+      "to be or not to bem ase pory for thrame, ang thebbet's:\n",
+      "wollor:\n",
+      "your\n",
+      "the comprake thaist, mary bt hader o sore him on \n"
      ]
     }
    ],
@@ -425,12 +426,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to beether he eldielw.\n",
+      "to be or not to be ot highers\n",
+      "wither witr shumt.\n",
       "\n",
-      "cominius:\n",
-      "vird,\n",
-      "unou welf to gol the selved,\n",
-      "and not that denia in all fuch the b\n"
+      "comat hame\n",
+      "thears, theicans, will and adfeve toutus\n",
+      "\n",
+      "and fors sprove\n"
      ]
     }
    ],
@@ -547,7 +549,7 @@
     "train_dataset = ShakespeareDataset(encoded, length)\n",
     "train_loader = DataLoader(\n",
     "    train_dataset,\n",
-    "    shuffle=True,\n",
+    "    shuffle=False, # Ensure determinsitic training\n",
     "    batch_size=batch_size,\n",
     ")"
    ]
@@ -676,26 +678,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5, Loss: 6.178692927905823\n",
-      "[00m 2.6s (0 0%) 6.0003]\n",
+      "Epoch 1/5, Loss: 6.5734895998544065\n",
+      "[00m 2.7s (0 0%) 6.1417]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be mat :? done they him he com fl butcher, with : your your, the,nia : but it cannotrti he an will s - forth\n",
-      "Epoch 2/5, Loss: 5.408855026365777\n",
-      "[00m 5.3s (1 20%) 5.3355]\n",
+      "to be or not to be himfect small made till have lose to wars f forforw :, ; risen, breath co our for what : now honoursher sights got mother\n",
+      "Epoch 2/5, Loss: 5.882414554447443\n",
+      "[00m 5.6s (1 20%) 5.7952]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be am all upon leaves sword only our op may aside world is with you. all he lip ofs ve as, prayer. that us, is,\n",
-      "Epoch 3/5, Loss: 4.877313198544393\n",
-      "[00m 8.0s (2 40%) 4.4577]\n",
+      "to be or not to be in of on trophy ; : gods :, mine press lay how -s to,ty theutus and him looks ; to seen word des this er\n",
+      "Epoch 3/5, Loss: 5.608338239999293\n",
+      "[00m 8.3s (2 40%) 5.5824]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be intend his yarn shericertius : i off, vol your most hostages way the behold rather em blood, vol interior : would what ta pity co\n",
-      "Epoch 4/5, Loss: 4.477121763855871\n",
-      "[00m 10.7s (3 60%) 4.6280]\n",
+      "to be or not to be disadvantage issue often, as him swear br has that they :. bonnet abundance sound arms v blast in though weguide as andure the state s\n",
+      "Epoch 4/5, Loss: 5.384834153228723\n",
+      "[00m 11.1s (3 60%) 5.3928]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be let to cominius, i shall back home we shall day with harm price ; where slip my incorporate for the souths than hat affection to your\n",
-      "Epoch 5/5, Loss: 4.169655736635491\n",
-      "[00m 13.4s (4 80%) 4.6953]\n",
+      "to be or not to be the capitol baby for cry kn mile fame gates, that, wave again. marc think would beatus?inius : theane, report g his\n",
+      "Epoch 5/5, Loss: 5.200708334753403\n",
+      "[00m 14.0s (4 80%) 5.2110]\n",
       "------------------------------------------------------------------------\n",
-      "to be or not to be them, and i - manner! corioli, bonnet to him are ; and dam enough. virgilia : i': ears you true,\n"
+      "to be or not to be deie country hear : of whatledinglu itself it to make theuti issued th d. sicinius : but orius, love,\n"
      ]
     }
    ],
@@ -745,7 +747,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "to be or not to be the volsces are ; and your choice, the vols, and i am, and'd, and's ay? marcius : if\n"
+      "to be or not to be.'s yournia in he, you have, and a people, that and the capitol of the people is the people'd : he the\n"
      ]
     }
    ],
