--- a/demo-1-hugging-face-tokenizer/hugging-face-tokenizer.ipynb
+++ b/demo-1-hugging-face-tokenizer/hugging-face-tokenizer.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,20 +52,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Encoding: Text to Tokens"
+    "## Encoding: Text to Tokens"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's a couple ways to get the tokens from text. The simplest is calling\n",
-    "`.tokenize()` on the text."
+    "### Tokens: String Representations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -77,26 +76,16 @@
     }
    ],
    "source": [
-    "raw_text = '''Rory\\'s shoes are magenta and so are Corey\\'s but they aren\\'t nearly as dark!'''\n",
+    "# Simple method getting tokens from text\n",
+    "raw_text = '''Rory's shoes are magenta and so are Corey's but they aren't nearly as dark!'''\n",
     "tokens = my_tokenizer.tokenize(raw_text)\n",
     "\n",
     "print(tokens)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Another is calling the tokenizer with the text and then calling the `.tokens()`\n",
-    "method.\n",
-    "\n",
-    "This will also return some special tokens depending on the pretrained tokenizer\n",
-    "used."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,6 +97,7 @@
     }
    ],
    "source": [
+    "# This method also returns special tokens depending on the pretrained tokenizer\n",
     "detailed_tokens = my_tokenizer(raw_text).tokens()\n",
     "\n",
     "print(detailed_tokens)"
@@ -117,14 +107,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get the tokens as integer IDs, there are again a few methods.\n",
-    "\n",
-    "The first is using the tokenizers `.encode()` method on the text."
+    "### Tokens: Integer ID Representations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,20 +124,13 @@
     }
    ],
    "source": [
+    "# Way to get tokens as integer IDs\n",
     "print(my_tokenizer.encode(raw_text))"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can also the `.convert_tokens_to_ids()` tokenizer method if we already have\n",
-    "the tokens (as strings) to get the IDs"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -163,6 +144,8 @@
    ],
    "source": [
     "print(detailed_tokens)\n",
+    "\n",
+    "# Tokenizer method to get the IDs if we already have the tokens as strings\n",
     "detailed_ids = my_tokenizer.convert_tokens_to_ids(detailed_tokens)\n",
     "print(detailed_ids)"
    ]
@@ -176,18 +159,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We first call the tokenizer on the text like we did last time but with no extra \n",
-    "method.\n",
-    "\n",
-    "This returns an object that has a few different keys available."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -196,26 +169,19 @@
        "{'input_ids': [101, 14845, 112, 188, 5743, 1132, 27595, 13130, 1105, 1177, 1132, 19521, 112, 188, 1133, 1152, 4597, 112, 189, 2212, 1112, 1843, 106, 102], 'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0], 'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Returns an object that has a few different keys available\n",
     "my_tokenizer(raw_text)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll then focus on `input_ids` which are the IDs associated with the\n",
-    "tokenizations."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -227,6 +193,7 @@
     }
    ],
    "source": [
+    "# focus on `input_ids` which are the IDs associated with the tokens.\n",
     "print(my_tokenizer(raw_text).input_ids)"
    ]
   },
@@ -234,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Decoding: Tokens to Text"
+    "## Decoding: Tokens to Text"
    ]
   },
   {
@@ -245,17 +212,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll start with the inverse of the `.enocde()` method: `.decode()`!\n",
-    "\n",
-    "This will get us a full string using the tokens (from the IDs)."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -264,31 +222,22 @@
        "\"[CLS] Rory's shoes are magenta and so are Corey's but they aren't nearly as dark! [SEP]\""
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Integer IDs for tokens\n",
     "ids = my_tokenizer.encode(raw_text)\n",
+    "\n",
+    "# The inverse of the .enocde() method: .decode()\n",
     "my_tokenizer.decode(ids)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You might've noticed that you didn't go back to the original text and instead\n",
-    "have some special tokens. This is because the `.encode()` will return IDs for\n",
-    "special tokens (assuming the pretrained tokenizer used special tokens).\n",
-    "\n",
-    "To use `.decode()` but not the special tokens, we can use the parameter\n",
-    "`skip_special_tokens` and set it to `True`."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -297,45 +246,65 @@
        "\"Rory's shoes are magenta and so are Corey's but they aren't nearly as dark!\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# To ignore special tokens (depending on pretrained tokenizer)\n",
     "my_tokenizer.decode(ids, skip_special_tokens=True)"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If we instead wanted a list of the tokens decoded from the IDs, we could instead\n",
-    "use the `.convert_ids_to_tokens()` method."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['[CLS]', 'Rory', \"'\", 's', 'shoes', 'are', 'mage', '##nta', 'and', 'so', 'are', 'Corey', \"'\", 's', 'but', 'they', 'aren', \"'\", 't', 'nearly', 'as', 'dark', '!', '[SEP]']\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['[CLS]',\n",
+       " 'Rory',\n",
+       " \"'\",\n",
+       " 's',\n",
+       " 'shoes',\n",
+       " 'are',\n",
+       " 'mage',\n",
+       " '##nta',\n",
+       " 'and',\n",
+       " 'so',\n",
+       " 'are',\n",
+       " 'Corey',\n",
+       " \"'\",\n",
+       " 's',\n",
+       " 'but',\n",
+       " 'they',\n",
+       " 'aren',\n",
+       " \"'\",\n",
+       " 't',\n",
+       " 'nearly',\n",
+       " 'as',\n",
+       " 'dark',\n",
+       " '!',\n",
+       " '[SEP]']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(my_tokenizer.convert_ids_to_tokens(ids))"
+    "# List of tokens as strings instead of one long string\n",
+    "my_tokenizer.convert_ids_to_tokens(ids)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A Note on the Unknown"
+    "## A Note on the Unknown"
    ]
   },
   {
@@ -375,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
