Clean up "A Note on the Unknown" - Remove text (summarized in recording) - Change skull & crossbones emoji to more visible skull emoji

--- a/demo-1-hugging-face-tokenizer/hugging-face-tokenizer.ipynb
+++ b/demo-1-hugging-face-tokenizer/hugging-face-tokenizer.ipynb
@@ -311,16 +311,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One thing to consider is if a string is outside of the tokenizer's vocabulary,\n",
-    "also know as an \"unkown\" token. They are typically represented with `[UNK]` or\n",
-    "some other similar variant."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "> One thing to consider is if a string is outside of the tokenizer's vocabulary,\n",
+    "> also know as an \"unkown\" token.\n",
+    "> \n",
+    "> They are typically represented with `[UNK]` or\n",
+    "> some other similar variant.\n",
     "\n",
+    "\n",
+    "<!--\n",
     "If the tokenizer encoded the text so each character was a token (which is\n",
     "actually not as easy as it sounds), then it would be impossible to have an\n",
     "\"unknown\" token. Word-based tokenization will always be in danger of having \n",
@@ -329,17 +327,20 @@
     "\n",
     "And so you might think that subword tokenization wouldn't have an issue with\n",
     "\"unknown\" tokens. And although there are fewer than word-based tokenization, it\n",
-    "does happen!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "does happen!\n",
+    "\n",
+    "--------------------------------------------------------------------------------\n",
+    "\n",
     "Tokenizers are specific so it's important to use a tokenizer that will recognize\n",
     "most of the text you're working with! For example, a lot of tokenizers might not\n",
     "consider emoji as tokens but could be really important if emoji are especially\n",
-    "numerous in your data (like a corpus of chat messages)!"
+    "numerous in your data (like a corpus of chat messages)!\n",
+    "\n",
+    "If you're seeing a lot of \"unknown\" tokens with the text you're working with,\n",
+    "might consider using a different tokenizer appropiate for the task. Or it's also\n",
+    "possible to fine-tune a pretrained model or train one from scratch!\n",
+    "\n",
+    "-->"
    ]
   },
   {
@@ -374,27 +375,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "wow my dad thought mcdonalds sold tacos ☠\n",
+      "wow my dad thought mcdonalds sold tacos 💀\n",
       "['[CLS]', 'w', '##ow', 'my', 'dad', 'thought', 'm', '##c', '##don', '##ald', '##s', 'sold', 'ta', '##cos', '[UNK]', '[SEP]']\n",
       "[CLS] wow my dad thought mcdonalds sold tacos [UNK] [SEP]\n"
      ]
     }
    ],
    "source": [
-    "phrase = '''wow my dad thought mcdonalds sold tacos \\N{SKULL AND CROSSBONES}'''\n",
+    "phrase = '''wow my dad thought mcdonalds sold tacos \\N{SKULL}'''\n",
     "ids = my_tokenizer.encode(phrase)\n",
     "print(phrase)\n",
     "print(my_tokenizer.convert_ids_to_tokens(ids))\n",
     "print(my_tokenizer.decode(ids))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If you're seeing a lot of \"unknown\" tokens with the text you're working with,\n",
-    "might consider using a different tokenizer appropiate for the task. Or it's also\n",
-    "possible to fine-tune a pretrained model or train one from scratch!"
    ]
   }
  ],
