Remove some of the narrative Markdown

--- a/exercise-2-name/solution/encoding.ipynb
+++ b/exercise-2-name/solution/encoding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -15,15 +15,7 @@
     "from __future__ import annotations\n",
     "\n",
     "import string\n",
-    "import re\n",
-    "from transformers import AutoTokenizer"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Intro"
+    "import re"
    ]
   },
   {
@@ -42,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -79,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,35 +160,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now try out our full tokenization process! Let's use this sample text to\n",
-    "see how our tokenization pipeline handles it!"
+    "Use this sample text to see how our tokenization pipeline handles the text."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mr. Louis continued to say, \"Penguins are important, \n",
-      "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'Mr. Louis continued to say, \"Penguins are important, \\nbut we mustn\\'t forget the nuumber 1 priority: the READER!\"\\n'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
     "but we mustn't forget the nuumber 1 priority: the READER!\"\n",
@@ -208,17 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "tokens = tokenize_text(sample_text)\n",
     "tokens = postprocess_tokens(tokens)\n",
@@ -230,20 +193,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now need to encode the tokens to IDs we'll give to a model. But first we need\n",
-    "to define how to map each token to a unique ID. An easy method can be to\n",
-    "arbitrarily count the unique tokens from our corpus.\n",
+    "Encode the tokens to IDs by defining how to map each token to a unique ID.\n",
     "\n",
-    "We'll use the following as our sample corpus."
+    "> HINT: \n",
+    "> \n",
+    "> An easy method is to assign an arbitrary integer to each unique token from \n",
+    "> the corpus by iterating through the unique tokens."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Normally this would be much bigger\n",
+    "# Sample corpus (normally this would be much bigger)\n",
     "sample_corpus = (\n",
     "    '''Mr. Louis continued to say, \"Penguins are important, \\nbut we mustn't forget the nuumber 1 priority: the READER!\"''',\n",
     "    '''BRUTUS:\\nHe's a lamb indeed, that baes like a bear.''',\n",
@@ -253,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,38 +239,22 @@
     "token2id = {\n",
     "    token: idx\n",
     "    for idx, token in enumerate(unique_tokens)\n",
+    "}\n",
+    "\n",
+    "# A mapping for IDs to convert back to token\n",
+    "id2token = {\n",
+    "    idx: token\n",
+    "    for token, idx in token2id.items()\n",
     "}"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For good measure, create a mapping for IDs to convert back to token"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "id2token = {idx: token for token, idx in token2id.items()}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's create our encoder and decoder to transform our tokens to IDS and back"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Create an encoder to transform token strings to IDs\n",
     "def encode(tokens: list[str]) -> list[int]:\n",
     "    # Note this doesn't handle tokens not mapped\n",
     "    encoded_tokens = [\n",
@@ -318,10 +266,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create an encoder to transform IDs to token strings\n",
     "def decode(ids: list[int]) -> list[str]:\n",
     "    token_strings = [\n",
     "        id2token[idx]\n",
@@ -332,25 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tokens:\n",
-      "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
-      "\n",
-      "Encoded Tokens:\n",
-      "[33, 43, 57, 45, 31, 41, 32, 4, 20, 14, 21, 9, 4, 46, 35, 47, 5, 39, 49, 58, 38, 51, 53, 26, 58, 6, 22, 20, 8]\n",
-      "\n",
-      "Decoded Tokens:\n",
-      "['##BOS##', 'mr', '.', 'louis', 'continued', 'to', 'say', ',', '\"', 'penguins', 'are', 'important', ',', 'but', 'we', 'mustn', \"'\", 't', 'forget', 'the', 'nuumber', '1', 'priority', ':', 'the', 'reader', '!', '\"', '##EOS##']\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Testing out encoding and decoding \n",
     "sample_text = '''Mr. Louis continued to say, \"Penguins are important, \n",
